feat: PWA tweaks

--- a/index.html
+++ b/index.html
@@ -9,6 +9,12 @@
     <title>Alpine Ana</title>
     <link rel="manifest" href="/manifest.json" />
     <meta name="theme-color" content="#87ceeb" />
+    <meta name="apple-mobile-web-app-title" content="Alpine Ana" />
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta
+      name="apple-mobile-web-app-status-bar-style"
+      content="black-translucent"
+    />
     <link rel="apple-touch-icon" href="/assets/icon-192.png" />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/three@0.128.0/examples/js/loaders/GLTFLoader.js"></script>
