tweak: fix padding

--- a/index.html
+++ b/index.html
@@ -132,6 +132,14 @@
         overflow: visible;
       }
 
+      @media (max-width: 768px) {
+        #game-over-content {
+          margin: 20px;
+          padding: 30px 20px;
+          max-width: calc(100% - 40px);
+        }
+      }
+
       /* Candy cane border effect */
       #game-over-content::before {
         content: "";
