--- a/index.html
+++ b/index.html
@@ -37,12 +37,19 @@
         box-sizing: border-box;
         touch-action: none;
         user-select: none;
+        -webkit-user-select: none;
+        -webkit-touch-callout: none;
+        -webkit-tap-highlight-color: transparent;
       }
 
       body {
         overflow: hidden;
         background: linear-gradient(to bottom, #87ceeb, #e0f7fa);
         font-family: "Segoe UI", monospace;
+        user-select: none;
+        -webkit-user-select: none;
+        -webkit-touch-callout: none;
+        -webkit-tap-highlight-color: transparent;
       }
 
       /* UI Layer */
@@ -1753,6 +1760,10 @@
         activeGift = null;
         giftCollected = false;
         lastGiftSpawnDistance = 0;
+
+        // Reset score for new game
+        score = 0;
+        document.getElementById("score").innerText = "0";
 
         // Start the game
         gameActive = true;
@@ -4752,6 +4763,12 @@ skierModel.rotation.set(${skierParams.rotX.toFixed(
         let touchStartY = 0;
         let touchEndX = 0;
         let touchEndY = 0;
+
+        // Prevent context menu on long press (mobile)
+        document.addEventListener("contextmenu", (e) => {
+          e.preventDefault();
+          return false;
+        });
 
         document.addEventListener(
           "touchstart",
